# notion-startpage

./: .flake8  .gitignore  .pre-commit-config.yaml  .samrc  CLAUDE.md  Makefile  README.md  lambda_handler.py  pyproject.toml  run.py  template.yaml
.github/workflows/: deploy-lambda.yml
.zenflow/: settings.json
.zenflow/tasks/new-task-7590/: plan.md  report.md  spec.md
.zenflow/tasks/set-up-project-config-91b7/: plan.md
docs/: AWS_LAMBDA_SETUP.md  BLOG_POST.md
src/startpage/: lambda_handler.py  startpage.py
src/startpage/components/: calendar.py  currency.py  fact.py  github_trends.py  rss.py  weather.py
src/startpage/playground/: calendar.ipynb  currency.ipynb  fact.ipynb  github_trends.ipynb  notion.ipynb  rss.ipynb  tavily.ipynb  test_rss.ipynb  weather.ipynb
src/startpage/utils/: blocks.py
tests/: test_blocks.py  test_calendar.py  test_currency.py  test_fact.py  test_github_trends.py  test_rss.py  test_startpage.py  test_weather.py
